fixed bug_background surfing image now covers entire background for contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ h4 {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-position: -200px 175px;
+    background-position: cover;
 }
 
 /* -------------------------------------------------------------------------------Mailto Form */
